debug and tested endpoints; updated test scripts
